# maps

./: pyproject.toml  readme.md  requirements.txt
Geolocationpy/: comfolium.py  comgeopy.py
Geopandas/: TestandoGeoPandas.ipynb  testandogeopandas.py
PolarsPandasPrimeiraImpressão/: pandas_e_polars.py
mapa_interativo./: main.py
plotlyDash/: plotly_mapaBR.py  plotlydash.py
